<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/profile_icon"
            app:civ_border_color="#FF000000"
            app:civ_border_width="@dimen/margin_1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/mr_wil"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6dp"
            android:text="@string/user"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18dp"
            android:text="@string/html_url"
            android:textColor="#1353D1"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <CheckBox
            android:id="@+id/favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24dp"
            android:button="@drawable/favourite_selector"
            android:buttonTint="@color/red"
            android:checked="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_gist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gists"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_gist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/visual_photo_me"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_repos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_gist">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repositories"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_repos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/visual_photo_me"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_organization"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_repos">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/visual_photo_me"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>